# mcp-server-4-claude-skills

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: smoke_test.py
src/skills_mcp/: __init__.py  __main__.py  auth.py  config.py  db.py  repository.py  server.py  tools.py  web.py
tests/: conftest.py  test_auth.py  test_config.py  test_repository.py  test_server.py  test_tools.py  test_web.py
