[project]
name = "centralised-claude-skills-mcp"
version = "0.1.0"
description = "Centralised, MCP-served skills store consumed by all Claude Code instances."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
]

[project.scripts]
skills-mcp = "skills_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=skills_mcp --cov-report=term-missing"

[tool.coverage.run]
source = ["skills_mcp"]
omit = ["src/skills_mcp/__main__.py"]
